Smaller point sizes on headers Changed ratios used to calculate header sizes in order to improve measure on long line lengths, clean up the visual hierarchy and prevent overflow/wrapping issues

--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -11,12 +11,12 @@
 // be at 13px or so.
 @base-font-size: 14px;
 @base-line-height: 1.4em;
-@top-header-size: 36px;
+@top-header-size: 28px;
 @h1-size: @top-header-size;
-@h2-size: (@top-header-size * .8);
-@h3-size: (@top-header-size * .7);
-@h4-size: (@top-header-size * .6);
-@h5-size: (@top-header-size * .5);
+@h2-size: (@top-header-size * .875);
+@h3-size: (@top-header-size * .8);
+@h4-size: (@top-header-size * .7);
+@h5-size: (@top-header-size * .6);
 
 // Font families
 @styled-header-family: @roboto;
